...



    <string name="passwords_match_error_text">Passwords do not match.</string>
    <string name="try_again_text">Try Again</string>

    <string name="backtologin">Back to Login</string>
    <string name="account"></string>
    <string name="new_account">Welcome to Subscription Manager</string>
    <string name="username">Username</string>
    <string name="login_title">Log in to your Subscription Manager account</string>
    <string name="welcome_message">Glad to see you!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_username">Enter Username</string>
    <string name="main_title">Subscription Manager</string>
    <string name="app_name">Subscription Manager</string>
    <string name="title">Subscription Manager</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
	
	<string name="new_subscription">New Subscription</string>
	<string name="subscription_name">Name</string>
	<string name="enter_subscription_name">Enter Subscription Name</string>
	<string name="subscription_cost">Cost</string>
	<string name="next_due_date">Next Due Date</string>
	<string name="create_subscription">Create Subscription</string>
	<string name="go_to_applications">Go To Applications</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

</resources>
